# twenty-five-and-five

./: CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/: FUNDING.yml
assets/: org.uncomfy.twentyfiveandfive.desktop
src/: lib.rs  main.rs
src/timer/: mod.rs
src/window/: mod.rs
