[package]
name = "twenty-five-and-five"
homepage = "https://codeberg.org/uncomfyhalomacro/twenty-five-and-five"
repository = "https://codeberg.org/uncomfyhalomacro/twenty-five-and-five"
authors = ["Soc Virnyl Estela <socvirnyl.estela@uncomfyhalomacro.pl>"]
description = "Times your work in twenty-five minutes, gives you a break for five minutes. Optional relaxation for 15 minutes. Sounds familiar?"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# Our binary
default-run = "twenty-five-and-five"

[dependencies]
iced = { version = "0.10.0", features = ["smol"] }
iced_aw = { version = "0.7.0", features = ["tabs", "modal", "card"], default-features = false }
iced_runtime = "0.1.1"
native-dialog = "0.6.3"
notify-rust = { version = "4", optional = false }
tracing = { version = "^0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
